docs: update profile-based service registration guidelines and add BAB/Derbent configuration files